plugins {
    id 'com.github.ben-manes.versions' version '0.17.0'
    id 'org.jetbrains.kotlin.jvm' version '1.5.31'
}

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'antlr'

version = '2.0.0-alpha.1'
group = 'io.georocket'

mainClassName = 'io.georocket.MainKt'

ext {
    vertxVersion = '4.2.2'
}

repositories {
    mavenCentral()
    exclusiveContent {
        forRepository {
            maven {
                url 'https://repo.osgeo.org/repository/release/'
            }
        }
        filter {
            includeGroup "jgridshift"
            includeGroup "org.geotools"
        }
    }
}

configurations.all {
    exclude group: 'org.slf4j', module: 'slf4j-log4j12'
}

dependencies {
    implementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '1.7.25'
    implementation group: 'org.slf4j', name: 'log4j-over-slf4j', version: '1.7.32'
    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.25'

    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.9'
    implementation group: 'ch.qos.logback', name: 'logback-core', version: '1.2.3'

    implementation "io.vertx:vertx-core:$vertxVersion"
    implementation "io.vertx:vertx-lang-kotlin:$vertxVersion"
    implementation "io.vertx:vertx-lang-kotlin-coroutines:$vertxVersion"
    implementation "io.vertx:vertx-service-discovery:$vertxVersion"
    implementation "io.vertx:vertx-mongo-client:$vertxVersion"
    implementation "io.vertx:vertx-web:$vertxVersion"
    implementation "io.vertx:vertx-web-client:$vertxVersion"

    implementation 'software.amazon.awssdk:s3:2.15.75'
    implementation 'de.undercouch:actson:1.2.0'
    implementation 'de.undercouch:underline:1.0.0'
    implementation 'com.google.guava:guava:23.6-jre'
    implementation 'com.fasterxml:aalto-xml:1.0.0'
    implementation 'com.h2database:h2:1.4.196'
    implementation 'com.vividsolutions:jts:1.13'
    implementation 'commons-io:commons-io:2.6'
    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.12.0"
    implementation 'io.pebbletemplates:pebble:3.1.5'
    implementation 'javax.servlet:javax.servlet-api:4.0.0'
    implementation 'net.java.dev.jna:jna:5.10.0'
    implementation 'net.time4j:time4j-core:4.38'
    implementation 'org.apache.ant:ant:1.10.12'
    implementation 'org.apache.commons:commons-exec:1.3'
    implementation 'org.apache.commons:commons-math3:3.6.1'
    implementation 'org.apache.commons:commons-text:1.3'
    implementation 'org.apache.httpcomponents:httpcore:4.4.14'
    implementation 'org.fusesource.jansi:jansi:1.17.1'
    implementation 'org.jline:jline:3.21.0'
    implementation 'org.yaml:snakeyaml:1.30'

    implementation('org.geotools:gt-epsg-extension:19.1') {
        // exclude invalid dependency
        exclude group: 'javax.media', module: 'jai_core'
    }
    implementation('org.geotools:gt-epsg-hsql:19.1') {
        // exclude invalid dependency
        exclude group: 'javax.media', module: 'jai_core'
    }
    implementation('org.geotools:gt-referencing:19.1') {
        // exclude invalid dependency
        exclude group: 'javax.media', module: 'jai_core'
    }

    // mongodb driver + snappy compression
    implementation 'org.mongodb:bson:3.6.1'
    implementation 'org.mongodb:mongodb-driver-async:3.12.10'
    implementation 'org.mongodb:mongodb-driver-reactivestreams:4.4.0'
    implementation 'org.xerial.snappy:snappy-java:1.1.8.4'
    implementation 'io.projectreactor:reactor-core:3.4.13'

    // embedded mongodb for standalone mode
    implementation 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:3.1.4'

    // necessary for ALPN / HTTP/2
    runtimeOnly "io.netty:netty-tcnative-boringssl-static:2.0.36.Final"

    implementation "org.jetbrains.kotlin:kotlin-reflect"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.4.2'
    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-reactive:1.4.2'

    testImplementation 'com.github.tomakehurst:wiremock-jre8:2.25.1'
    testImplementation 'org.mongodb:mongodb-driver:3.12.10'

    testImplementation "io.vertx:vertx-unit:$vertxVersion"
    testImplementation 'junit:junit:4.13.2'
    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine:5.7.0'

    testImplementation "io.mockk:mockk:1.12.1"
    testImplementation "io.vertx:vertx-junit5:$vertxVersion"
    testImplementation "org.assertj:assertj-core:3.18.1"
    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
    testImplementation "org.junit.jupiter:junit-jupiter-params:5.8.2"
    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.8.2"
    testImplementation "org.testcontainers:testcontainers:1.15.2"
    testImplementation "org.testcontainers:junit-jupiter:1.15.2"

    antlr 'org.antlr:antlr4:4.5.3'
}

// customize start scripts
startScripts {
    // customize application name
    applicationName = 'georocket'

    // set GEOROCKET_HOME environment variable
    doLast {
        def windowsScriptFile = file(getWindowsScript())
        def unixScriptFile = file(getUnixScript())
        windowsScriptFile.text = windowsScriptFile.text
            .replaceFirst('set APP_HOME=.*', '$0\r\nset GEOROCKET_HOME=%APP_HOME%')
        unixScriptFile.text = unixScriptFile.text
            .replaceFirst('APP_HOME=.*', '$0\nexport GEOROCKET_HOME=\\$APP_HOME')
    }
}

distributions {
    main {
        contents {
            // include 'conf' directory in distribution
            from(projectDir) {
                include 'conf/**/*'
            }

            // include 'docs' in distribution
            from(tasks.getByPath(':docs:asciidoctor')) {
                into "docs"
                eachFile { f ->
                    f.path = f.path.replaceFirst(/html5\//, '')
                }
                includeEmptyDirs = false
            }
        }
    }
}

// Fix command-length issue in windows startscript
// see https://issues.gradle.org/browse/GRADLE-2992
task pathingJar(type: Jar) {
    appendix = 'pathing'
    manifest { attributes("Class-Path": configurations.runtimeClasspath.collect { it.getName() }.join(' ') + ' ' + jar.archiveName ) }
}
applicationDistribution.from(pathingJar) { into "lib" }
startScripts {
    doLast {
        def winScriptFile  = file getWindowsScript()
        def winFileText = winScriptFile.text

        // Remove too-long-classpath and use pathing jar instead
        winFileText = winFileText.replaceAll('set CLASSPATH=.*', 'rem CLASSPATH declaration removed.')
        winFileText = winFileText.replaceAll('("%JAVA_EXE%" .* -classpath ")%CLASSPATH%(" .*)', '$1%APP_HOME%\\\\lib\\\\' + pathingJar.archiveName + '$2')

        winScriptFile.text = winFileText
    }
}

compileJava {
    sourceCompatibility = '11'
    targetCompatibility = '11'
}

compileKotlin {
    kotlinOptions.jvmTarget = "11"
}

compileTestKotlin {
    kotlinOptions.jvmTarget = "11"
}

task generateVersionFile {
    doLast {
        def dst = new File(project.buildDir, 'generated-src/main/resources/io/georocket')
        dst.mkdirs()
        def versionFile = new File(dst, 'version.dat')
        versionFile.withWriter { w ->
            w << project.version
        }
    }
}

task generateSources(dependsOn: [generateVersionFile, generateGrammarSource])

processResources.dependsOn(generateSources)

compileKotlin.dependsOn(processResources)

// include generated sources
sourceSets.main.java.srcDirs "$buildDir/generated-src/main/java"
sourceSets.main.resources.srcDirs "$buildDir/generated-src/main/resources"
